not adding headers

--- a/afspclient/pom.xml
+++ b/afspclient/pom.xml
@@ -58,6 +58,12 @@
             <version>obers-1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>obers</groupId>
+            <artifactId>util</artifactId>
+            <version>obers-1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
