--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,13 @@
         <module>afsp</module>
         <module>util</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
